--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon -r dotenv/config index.js"
+    "server": "nodemon -r dotenv/config index.js",
+    "test": "cross-env DB_ENV=testing jest --watch"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -22,5 +23,8 @@
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvirnoment": "node"
   }
 }
